crates/vexor-compiler/tests/golden/error/output/lambda_missing_body.err
parse error at line 4, column 1
  |
4 | val result = double(10)
  | ^
invalid lambda body